--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
-.vhs{
+.vhs {
     position: absolute;
     left: 11px;
     top: 12px;
 }
 
-.time{
+.time {
     position: absolute;
     right: 11px;
     top: 12px;
+}
+
+.main {
+    margin: 120px auto 0 auto;
+    max-width: 700px;
 }
