--- a/style.css
+++ b/style.css
@@ -22,7 +22,19 @@
 .hide-me {
     display: none;
 }
-
+button {
+    display: inline-block;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 100%;
+    background-color: #797c3d;
+    border-radius: 5px;
+    padding: 2px 10px;
+    color: white;
+    border: 0;
+    transition: background-color 0.1s;
+  }
+  
 .answers button {
     display: block;
 }
